# UNCtools

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  project-structure.md  pyproject.toml  requirements.txt  run_tests.py  setup.cfg  setup.py
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: main.yml  pypi-publish.yml  release.yml
docs/: implementation-guide.md  implementation-summary.md  integration-guide.md
examples/: basic_usage.py  batch_operations.py  windows_zone_fix.py
scripts/: listall.cmd
tests/: __init__.py  basic_functionality_test.py  conftest.py  test_converter.py  test_converter_v2.py  test_detector.py  test_framework.py  test_operations.py  test_win32net_warning.py  test_windows.py  test_windows_imports.py
unctools/: __init__.py  converter.py  detector.py  operations.py
unctools/utils/: __init__.py  compat.py  logger.py  validation.py
unctools/windows/: __init__.py  network.py  registry.py  security.py
