[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unctools"
description = "A comprehensive toolkit for handling UNC paths, network drives, and substituted drives"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
dynamic = ["version"]
authors = [
    {name = "Dustin Darcy", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["unc", "network", "windows", "path", "file", "share", "subst"]
dependencies = [
]

[project.optional-dependencies]
windows = ["pywin32"]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "flake8>=3.8.0",
    "black>=20.8b1",
    "tox>=3.20.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/unctools"
"Bug Reports" = "https://github.com/yourusername/unctools/issues"
"Source" = "https://github.com/yourusername/unctools"

[tool.setuptools]
packages = ["unctools"]

[tool.setuptools.dynamic]
version = {attr = "unctools.__version__"}

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38", "py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=unctools --cov-report=term-missing"
