[metadata]
name = unctools
version = attr: unctools.__version__
description = A comprehensive toolkit for handling UNC paths, network drives, and substituted drives
long_description = file: README.md
long_description_content_type = text/markdown
author = Dustin Darcy
author_email = 6962246+djdarcy@users.noreply.github.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: OS Independent
    Topic :: System :: Filesystems
    Topic :: Software Development :: Libraries :: Python Modules
keywords = unc, network, windows, path, file, share, subst, path conversion
project_urls =
    Bug Reports = https://github.com/djdarcy/UNCtools/issues
    Source = https://github.com/djdarcy/UNCtools
    Documentation = https://github.com/djdarcy/UNCtools#readme

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pathlib;python_version<"3.4"
zip_safe = False
include_package_data = True

[options.extras_require]
windows =
    pywin32>=223
    pypiwin32>=223
dev =
    pytest>=6.0.0
    pytest-cov>=2.10.0
    flake8>=3.8.0
    black>=20.8b1
    tox>=3.20.0
    mypy>=0.800
docs =
    sphinx>=4.0.0
    sphinx-rtd-theme>=0.5.0
    myst-parser>=0.15.0

[options.package_data]
unctools = py.typed
* = *.md, *.txt

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203, W503

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --cov=unctools --cov-report=term-missing
python_functions = test_*
python_classes = Test*

[mypy]
python_version = 3.6
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False